# Algorithms-HW-1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  charts.py  charts_info.py  general.py  main.py  parse_benchmark.py
.run/: Build.run.xml  Matrix_App.run.xml  Matrix_Benchmark.run.xml  Matrix_Lib.run.xml  Matrix_Test.run.xml
include/Matrix/: base_matrix.hpp  finder.hpp  generation.hpp  generator.hpp  matrix.hpp  search.hpp  searching.hpp
libs/: CMakeLists.txt
log/: .gitignore
log/benchmark/: .gitignore  Overall.json  Overall.txt
scripts/: parse_benchmark.py
src/: base_matrix.cpp  finder.cpp  generation.cpp  generator.cpp  main.cpp  matrix.cpp  search.cpp  searching.cpp
test/: CMakeLists.txt  finder_test.cpp  generation_test.cpp  generator_test.cpp  searching_performance_test.cpp  searching_test.cpp
testing/: CMakeLists.txt
testing/benchmark/: generator_benchmark.cpp  search_benchmark.cpp
testing/unit/: generator_test.cpp  search_test.cpp  test_main.cpp  test_utility.cpp  test_utility.hpp
